feat: 1.18.1 port, compiles